--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -18,13 +18,30 @@
   box-sizing: border-box;
 }
 
-
+html,
 body {
   padding: 0;
   margin: 0;
+}
+
+a,
+button {
+  -webkit-tap-highlight-color: transparent !important;
+}
+
+input:-webkit-autofill {
+  -webkit-box-shadow: inset 0 0 0 50px var(--primary-color-light) !important;
+  -webkit-text-fill-color: var(--primary-color-dark) !important;
+}
+
+/* div #root */
+.page { 
   min-width: 320px;
   min-height: 100vh;
+  width: 100%;
   scroll-behavior: smooth;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (prefers-color-scheme: light) {
