--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,12 +1,12 @@
+@import url('./contants.css');
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: dark light;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #211e2c;
-
+  color: var(--primary-color-light);
+  background: var(--primary-gradient);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -50,3 +50,4 @@ input:-webkit-autofill {
     background-color: #e9e8e4;
   }
 }
+
