--- a/client/src/components/connection-history/ConnectionHistory.module.css
+++ b/client/src/components/connection-history/ConnectionHistory.module.css
@@ -3,8 +3,9 @@
   padding: 8px 20px;
   list-style: none;
   display: grid;
+  align-content: start;
   row-gap: 8px;
-  max-height: 70vh;
+  max-height: 300px;
   width: 100%;
   overflow-y: auto;
   border: 1px solid var(--primary-color-light);
