--- a/client/src/components/connection-history/ConnectionHistory.module.css
+++ b/client/src/components/connection-history/ConnectionHistory.module.css
@@ -5,7 +5,8 @@
   display: grid;
   align-content: start;
   row-gap: 8px;
-  max-height: 300px;
+  min-height: 200px;
+  max-height: 40vh;
   width: 100%;
   overflow-y: auto;
   border: 1px solid var(--primary-color-light);
